--- a/rpc/add/etc/add.yaml
+++ b/rpc/add/etc/add.yaml
@@ -1,10 +1,10 @@
 Name: add.rpc
-ListenOn: 127.0.0.1:8080
+ListenOn: :20081
 Etcd:
   Hosts:
-  - 127.0.0.1:2379
+  - 192.168.206.128:2379
   Key: add.rpc
-DataSource: root:admin@tcp(localhost:3306)/test
+DataSource: root:admin@tcp(192.168.206.128:3306)/test
 Table: book
 Cache:
-  - Host: localhost:6379
+  - Host: 192.168.206.128:6379
